--- a/www/html/form.html
+++ b/www/html/form.html
@@ -65,14 +65,15 @@
     <div class="form-container">
         <h2>Submit Data</h2>
         <form action="/submit-data" method="POST" enctype="multipart/form-data">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
+            <label for="firstname">First Name</label>
+            <input type="text" id="firstname" name="firstname" required>
+	    
+	    <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" name="lastname" required>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
 
             <button type="submit" class="submit-btn">Submit</button>
         </form>
