--- a/www/html/uploads/upload.html
+++ b/www/html/uploads/upload.html
@@ -58,7 +58,7 @@
 <body>
     <div class="form-container">
         <h2>Upload File</h2>
-        <form action="/upload-file" method="POST" enctype="multipart/form-data">
+        <form action="/upload" method="POST" enctype="multipart/form-data">
             <label for="file">Choose File</label>
             <input type="file" id="file" name="file" required>
 
