--- a/www/html/session/session.html
+++ b/www/html/session/session.html
@@ -58,27 +58,26 @@
         }
     </style>
     <script>
-        // Function to send the session token to the server using key=value& format
-        async function sendSessionToken(username) {
+        // Function to send the session token to the server using multipart/form-data
+        async function sendSessionToken() {
             // Generate a unique session token
             const token = Math.random().toString(36).substr(2) + Date.now().toString(36);
 
-            // Prepare the data as key=value& format
-            const formData = `username=${username}&session_id=${token}`;
+            // Create a FormData object and append the data
+            const formData = new FormData();
+            // formData.append('username', username);
+            formData.append('session_id', token);
 
-            // Send the session token to the server (replace with your server URL)
+            // Send the form data to the server (replace with your server URL)
             const response = await fetch('/session', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: formData,
+                body: formData, // Automatically sets the content type to multipart/form-data
             });
 
             // If the server successfully stores the session, show a welcome message
             if (response.ok) {
                 const data = await response.text(); // Assuming the server sends a simple response text
-                document.getElementById("welcome-message").innerHTML = `Welcome, ${username}! Your session has been created.`;
+                document.getElementById("welcome-message").innerHTML = `Welcome, Your session has been created.`;
                 document.getElementById("input-section").style.display = "none"; // Hide input section after submission
             } else {
                 alert('Failed to create session. Please try again.');
@@ -87,12 +86,12 @@
 
         function handleSubmit(event) {
             event.preventDefault();
-            let username = document.getElementById("username").value.trim().replace(/\s+/g, '');
-            if (username) {
-                sendSessionToken(username); // Send the token to the server
-            } else {
-                alert("Please enter your username.");
-            }
+            // let username = document.getElementById("username").value.trim().replace(/\s+/g, '');
+            // if (username) {
+                sendSessionToken(); // Send the token to the server
+            // } else {
+            //     alert("Please enter your username.");
+            // }
         }
     </script>
 </head>
@@ -109,7 +108,7 @@
         <div id="input-section">
             <p>Please enter your username to generate a session:</p>
             <form onsubmit="handleSubmit(event)">
-                <input type="text" id="username" placeholder="Username (no spaces)" required>
+                <!-- <input type="text" id="username" placeholder="Username (no spaces)" required> -->
                 <button type="submit">Generate Session Token</button>
             </form>
         </div>
