--- a/www/html/redirection/newindex.html
+++ b/www/html/redirection/newindex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url=https://www.example.com">
+    <meta http-equiv="refresh" content="5;url={{Location}}">
     <title>Redirecting...</title>
     <style>
         body {
@@ -41,7 +41,7 @@
 <div class="container">
     <h1>Redirecting...</h1>
     <p>You are being redirected to another page. If the page doesn't redirect automatically, 
-    <a href="https://www.example.com" class="link">click here</a> to continue.</p>
+    <a href="{{Location}}" class="link">click here</a> to continue.</p>
     <p>Redirecting in <span id="countdown">5</span> seconds...</p>
 </div>
 
@@ -55,6 +55,7 @@
         countdownElement.innerHTML = countdown;
         if (countdown === 0) {
             clearInterval();
+            window.location.href = "{{Location}}";
         }
     }, 1000);
 </script>
