--- a/www/html/index.html
+++ b/www/html/index.html
@@ -105,7 +105,7 @@
 <body>
 
     <header>
-        <h1>Welcome to Webserv</h1>
+        <h1>Welcome toooooooooooooooo Webserv</h1>
         <p>A custom HTTP server project from 42 School</p>
     </header>
 
